--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  material_design_icons_flutter: ^7.0.7296
+  icons_plus: ^4.0.0
   firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
