--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.22.0
   firebase_auth: ^4.14.0
   google_sign_in: ^6.1.6
+  cloud_firestore: ^4.13.1
+  intl: ^0.18.1
+  datetime_picker_formfield_new: ^2.1.0
 
 dev_dependencies:
   flutter_test:
